Fix app mobile device view overflow bug.

--- a/teach-me-ui/src/styles/_Footer.scss
+++ b/teach-me-ui/src/styles/_Footer.scss
@@ -7,7 +7,7 @@ footer {
   margin-top: 4rem;
 
   .minor {
-    padding: 3rem 0;
+    padding: 4rem 0;
     text-transform: uppercase;
 
     > * {
@@ -22,7 +22,7 @@ footer {
       z-index: -1;
       height: 120%;
       width: 180vw;
-      top: -15%;
+      top: -12%;
       left: -40vw;
       bottom: 0;
       right: 0;
