--- a/teach-me-ui/src/styles/_misc.scss
+++ b/teach-me-ui/src/styles/_misc.scss
@@ -9,6 +9,7 @@ body,
   font-size: 1rem;
   color: $theme-color-tertiary-v2;
   line-height: 1.5rem;
+  
 }
 
 html {
@@ -44,6 +45,7 @@ body {
   width: 100%;
   min-height: 100vh;
   display: flex;
+  overflow: hidden;
 
   > div {
     width: 100%;
